--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -42,10 +42,16 @@
     <div class="form-group">
         <label for="fechaBaja">Fecha de baja: </label>
         <input id="fechaBaja" type="date" class="form-control" formControlName="fechaBaja">
+        <div [hidden]="getControlError('fechaBaja').valid" class="alert alert-danger">
+            <span *ngIf="getControlError('fechaBaja').errors?.['required']">
+                Fecha baja obligatorio
+            </span>
+            <span *ngIf="getControlError('fechaBaja').errors?.['fechaBajaNoValida']">
+                La fecha de baja no puede ser menor a la fecha de alta
+            </span>
+        </div>
     </div>
 
 </form>
 
-<button [disabled]="profileForm.invalid">Submit</button>
-
-{{getControlError('DNI').errors | json }}
+<button [disabled]="profileForm.invalid || getControlError('fechaBaja').errors?.['fechaBajaNoValida']">Submit</button>
